--- a/dev_releases/cp/index.yml
+++ b/dev_releases/cp/index.yml
@@ -70,4 +70,60 @@ builds:
     version: 0+dev.34
   7db73484-f758-4135-8cd5-59f612906942:
     version: 0+dev.35
+  e0de6d03-a0af-416e-81de-35e7d5cc8f62:
+    version: 0+dev.36
+  230b90d3-1429-4143-9eb3-9a48cd9638cf:
+    version: 0+dev.37
+  b9f7be05-fec0-47d1-a00f-9151a5be9b6a:
+    version: 0+dev.38
+  0763f30f-6451-4a5c-b5a9-929c60ece6d4:
+    version: 0+dev.39
+  f3e29343-e4c1-4561-a38a-3a0e2aea364f:
+    version: 0+dev.40
+  13a7e4f3-fbbd-48d9-a24c-9915c3f5242f:
+    version: 0+dev.41
+  551d6f23-0c97-4765-9ce4-fa9291579ceb:
+    version: 0+dev.42
+  1ba2f220-9e2a-47fe-b710-aee2acc1e720:
+    version: 0+dev.43
+  d5bf3100-3aee-439f-90ec-42465bdfa5bf:
+    version: 0+dev.44
+  e9e87869-641d-4fcf-b600-70e3397c4108:
+    version: 0+dev.45
+  ceee59e7-d8d2-448c-bdb9-4c5e8d36af2b:
+    version: 0+dev.46
+  0b056a37-5e60-464d-8035-1c7043b65338:
+    version: 0+dev.47
+  73d89a76-1b55-42dc-a89d-9135ea3717a8:
+    version: 0+dev.48
+  290e4aec-e960-42db-a7ca-e28eb108a8f8:
+    version: 0+dev.49
+  cbe3767c-f156-42c9-bca4-a8391c4bb4c3:
+    version: 0+dev.50
+  1ecaadbc-f2f1-4a22-b993-a6c5cb6b0f94:
+    version: 0+dev.51
+  25327cb2-80bc-474e-8795-2a9b06153ce4:
+    version: 0+dev.52
+  5d8b4ea1-61f8-4b36-b337-c0bc155a4bfb:
+    version: 0+dev.53
+  af08ce61-3269-40cb-9119-732c55d252da:
+    version: 0+dev.54
+  73e54baf-0d6a-4cf7-9221-70d05527f9fa:
+    version: 0+dev.55
+  f75f6fc1-2bf1-4e75-af51-fe4b97257d45:
+    version: 0+dev.56
+  5766426b-ac27-4b5d-ae05-ae7a1ee12f17:
+    version: 0+dev.57
+  99af0a4c-2734-4b42-879b-349b235bfe86:
+    version: 0+dev.58
+  f2f1e09e-a528-4631-b287-6cb83820e20f:
+    version: 0+dev.59
+  d482591c-b37c-42e3-b617-54dcb2c14992:
+    version: 0+dev.60
+  c64ac0b5-7197-4461-84a4-e9a4c4a3f48b:
+    version: 0+dev.61
+  38242a9d-f334-4bd8-997f-b9340c9dfe48:
+    version: 0+dev.62
+  6b683273-1155-473e-8b01-cf2fc532927d:
+    version: 0+dev.63
 format-version: '2'
