--- a/bosh.yml
+++ b/bosh.yml
@@ -4,7 +4,7 @@ director_uuid: 8720c964-252d-41ed-8543-eb40b733a633
 
 releases:
 - name: cp
-  version: 0+dev.63
+  version: 0+dev.65
 
 networks:
 - name: default
@@ -32,8 +32,8 @@ compilation:
 
 update:
   canaries: 1
-  canary_watch_time: 60000
-  update_watch_time: 60000
+  canary_watch_time: 60000-180000
+  update_watch_time: 60000-180000
   max_in_flight: 2
 
 jobs:
